--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,6 +20,14 @@ h1 {
     margin-bottom: 20px;
 }
 
+.letter {
+    display: inline-block;
+    width: 20px;
+    border-bottom: 1px solid black;
+    text-align: center;
+    margin-right: 10px;
+}
+
 #hangman-drawing {
     margin-bottom: 20px;
 }
@@ -29,7 +37,7 @@ h1 {
     letter-spacing: 10px;
     margin-bottom: 20px;
 
-    
+
 }
 
 
