--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,17 +29,76 @@ h1 {
 }
 
 #hangman-drawing {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
+}
+
+.head {
+    width: 50px;
+    height: 50px;
+    background-color: #000;
+    border-radius: 50%;
+}
+
+.body {
+    width: 10px;
+    height: 80px;
+    background-color: #000;
+    margin-bottom: 20px;
+}
+
+.left-arm {
+    transform: rotate(-45deg);
+    position: absolute;
+    left: 45%;
+    width: 60px;
+    height: 10px;
+    background-color: #000;
+    margin: 0 5px;
+}
+
+.right-arm {
+    transform: rotate(45deg);
+    position: absolute;
+    left: 49%;
+    width: 60px;
+    height: 10px;
+    background-color: #000;
+    margin: 0 5px;
+}
+
+
+.left-leg {
+    transform: rotate(45deg);
+    position: absolute;
+    bottom: 54%;
+    left: 47.5%;
+    width: 10px;
+    height: 50px;
+    background-color: #000;
+    margin: 0 5px;
+}
+
+.right-leg {
+    transform: rotate(-45deg);
+    position: absolute;
+    bottom: 54%;
+    left: 50.65%;
+    width: 10px;
+    height: 50px;
+    background-color: #000;
+    margin: 0 5px;
 }
 
 #word-container {
+    margin-top: 50px;
     font-size: 24px;
     letter-spacing: 10px;
     margin-bottom: 20px;
-
-
 }
-
 
 #letter-buttons {
     display: flex;
@@ -56,17 +115,23 @@ h1 {
 button {
     padding: 10px;
     font-size: 18px;
-    cursor: pointer;
     background-color: #6200ea;
     color: #fff;
     border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    border-radius: 10px;
+    transition: transform 0.2s ease-in-out;
 
-    button:hover {
-        background-color: #3700b3;
+    &:hover {
+        background-color: #000000;
+        transform: scale(1.1); 
     }
-    
+
+    &:disabled {
+        border: 1px solid black;
+        background-color: grey;
+        color: white;
+        cursor: not-allowed;
+    }   
 }
 
 #restart-button {
